<resources>
    <string name="app_name">SMR Hall</string>
    <string name="action_settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_fllor">FllorActivity</string>
    <string name="floor_welcome">Select floor number</string>
    <string name="title_activity_floor1">Floor1Activity</string>
    <string name="welcome_message">Welcome SMR HALL</string>
    <string name="profile_message">You can change your Username and Password from here</string>
    <string name="title_activity_profile_change">ProfileChange</string>
    <string name="pref_previously_started">testing</string>
    <string name="reg_message">Please registration here</string>
    <string name="joyBangla">জয় বাংলা জয় বঙ্গবন্ধু</string>
    <string name="shamim_name">এস.এম শামীম হাসান</string>
    <string name="shamim_desination">সাধারন সম্পাদক </string>
    <string name="desination_place">যশোর বিজ্ঞান ও প্রযুক্তি বিশ্ববিদ্যালয় শাখা </string>
    <string name="bangladesh_student_legue">বাংলাদেশ ছাত্রলীগ</string>
    <string name="shanto_name">বিপ্লব কুমার দে (শান্ত)</string>
    <string name="shanto_designation">সহ-সভাপতি</string>
    <string name="r102name1">Mohammad Tony</string>
    <string name="r102dep1">English</string>
    <string name="r102ses1">2014-15</string>
    <string name="r102blood1">B+</string>
    <string name="r102contact1">01987031172</string>
    <string name="r102name2">Shirajul Islam</string>
    <string name="r102dep2">English</string>
    <string name="r102ses2">2014-15</string>
    <string name="r102blood2">B+</string>
    <string name="r102contact2">01931825941</string>
    <string name="r102name3">Md Nasif Hossain</string>
    <string name="r102dep3">English</string>
    <string name="r102ses3">2014-15</string>
    <string name="r102blood3">O+</string>
    <string name="r102contact3">01737759975</string>
    <string name="r102name4">Abdullah Zubair Turzo</string>
    <string name="r102dep4">English</string>
    <string name="r102ses4">2015-16</string>
    <string name="r102blood4">B+</string>
    <string name="r102contact4">01936807439</string>
    <string name="r103name1">Mohiujjaman Rjvi</string>
    <string name="r103dep1">EST</string>
    <string name="r103ses1">MS 2014-15</string>
    <string name="r103blood1">non</string>
    <string name="r103contact1">01917145756</string>
    <string name="r103name2">Bappi Odhikari</string>
    <string name="r103dep2">EST</string>
    <string name="r103ses2">2012-13</string>
    <string name="r103blood2">non</string>
    <string name="r103contact2">01733728204</string>
    <string name="r103name3">Aslam Uddin</string>
    <string name="r103dep3">EST</string>
    <string name="r103ses3">2012-13</string>
    <string name="r103blood3">non</string>
    <string name="r103contact3">01740106826</string>
    <string name="r103name4">Selim Hosen</string>
    <string name="r103dep4">EST</string>
    <string name="r103ses4">2012-13</string>
    <string name="r103blood4">non</string>
    <string name="r103contact4">01758217526</string>
    <string name="r104name1">Joyonto Roy Joy</string>
    <string name="r104dep1">EST</string>
    <string name="r104ses1">2012-13</string>
    <string name="r104blood1">non</string>
    <string name="r104contact1">01737424460</string>
    <string name="r104name2">Murad Hosain</string>
    <string name="r104dep2">EST</string>
    <string name="r104ses2">2012-13</string>
    <string name="r104blood2">non</string>
    <string name="r104contact2">01746369455</string>
    <string name="r104name3">Mahin Millat</string>
    <string name="r104dep3">EST</string>
    <string name="r104ses3">2012-13</string>
    <string name="r104blood3">non</string>
    <string name="r104contact3">01738146761</string>
    <string name="r104name4">Estiak Ahmed</string>
    <string name="r104dep4">EST</string>
    <string name="r104ses4">2015-16</string>
    <string name="r104blood4">non</string>
    <string name="r104contact4">01774020413</string>
    <string name="r109name1">Md Obaidul Islam</string>
    <string name="r109dep1">ChE</string>
    <string name="r109ses1">2011-12</string>
    <string name="r109blood1">non</string>
    <string name="r109contact1">01760201080</string>
    <string name="r109name2">Md Ibrahim</string>
    <string name="r109dep2">ChE</string>
    <string name="r109ses2">2014-15</string>
    <string name="r109blood2">non</string>
    <string name="r109contact2">01934042289</string>
    <string name="r109name3">Foysal Kabir Razon</string>
    <string name="r109dep3">ChE</string>
    <string name="r109ses3">2011-12</string>
    <string name="r109blood3">non</string>
    <string name="r109contact3">01762333363</string>
    <string name="r109name4">Tahasinul Mawla</string>
    <string name="r109dep4">ChE</string>
    <string name="r109ses4">2013-14</string>
    <string name="r109blood4">non</string>
    <string name="r109contact4">01799716083</string>
    <string name="r109name5">Nasif Hasan Anik</string>
    <string name="r109dep5">ChE</string>
    <string name="r109ses5">2013-14</string>
    <string name="r109blood5">AB+</string>
    <string name="r109contact5">01670303291</string>
    <string name="r110name1">Abdullah</string>
    <string name="r110dep1">ChE</string>
    <string name="r110ses1">2011-12</string>
    <string name="r110blood1">non</string>
    <string name="r110contact1">01768694664</string>
    <string name="r110name2">Md Said al Jubair</string>
    <string name="r110dep2">ChE</string>
    <string name="r110ses2">2011-12</string>
    <string name="r110blood2">non</string>
    <string name="r110contact2">01760201080</string>
    <string name="r110name3">Biplob Roy</string>
    <string name="r110dep3">ChE</string>
    <string name="r110ses3">2011-12</string>
    <string name="r110blood3">non</string>
    <string name="r110contact3">01760245589</string>
    <string name="r110name4">Rasel Hosen</string>
    <string name="r110dep4">ChE</string>
    <string name="r110ses4">2011-12</string>
    <string name="r110blood4">non</string>
    <string name="r110contact4">01793653023</string>
    <string name="r110name5">Sumon Sarker</string>
    <string name="r110dep5">ChE</string>
    <string name="r110ses5">2011-12</string>
    <string name="r110blood5">non</string>
    <string name="r110contact5">01777201502</string>
    <string name="r115name1">Md Jakariya Alam</string>
    <string name="r115dep1">IPE</string>
    <string name="r115ses1">2013-14</string>
    <string name="r115blood1">non</string>
    <string name="r115contact1">01746232117</string>
    <string name="r115name2">Md Al mamun</string>
    <string name="r115dep2">IPE</string>
    <string name="r115ses2">2015-16</string>
    <string name="r115blood2">non</string>
    <string name="r115contact2">01685789938</string>
    <string name="r115name3">Md Abul Hasem</string>
    <string name="r115dep3">IPE</string>
    <string name="r115ses3">2013-14</string>
    <string name="r115blood3">non</string>
    <string name="r115contact3">01794216766</string>
    <string name="r115name4">Md Habibul Islam</string>
    <string name="r115dep4">IPE</string>
    <string name="r115ses4">2013-14</string>
    <string name="r115blood4">non</string>
    <string name="r115contact4">01729790241</string>
    <string name="r115name5">Md Khosnur Arefin</string>
    <string name="r115dep5">IPE</string>
    <string name="r115ses5">2013-14</string>
    <string name="r115blood5">non</string>
    <string name="r115contact5">01737267242</string>
    <string name="r118name1">Sakil Ahmed</string>
    <string name="r118dep1">NFT</string>
    <string name="r118ses1">MS 2014-15</string>
    <string name="r118blood1">non</string>
    <string name="r118contact1">01749705365</string>
    <string name="r118name2">Md Ismail Hosen</string>
    <string name="r118dep2">NFT</string>
    <string name="r118ses2">MS 2014-15</string>
    <string name="r118blood2">non</string>
    <string name="r118contact2">01713522713</string>
    <string name="r118name3">Abdur Rahman</string>
    <string name="r118dep3">NFT</string>
    <string name="r118ses3">MS 2014-15</string>
    <string name="r118blood3">non</string>
    <string name="r118contact3">01742275440</string>
    <string name="r118name4">Selim Reza</string>
    <string name="r118dep4">NFT</string>
    <string name="r118ses4">MS 2014-15</string>
    <string name="r118blood4">non</string>
    <string name="r118contact4">01737918900</string>
    <string name="r118name5">Md Nazmul Haque</string>
    <string name="r118dep5">NFT</string>
    <string name="r118ses5">2015-16</string>
    <string name="r118blood5">non</string>
    <string name="r118contact5">01768368006</string>
    <string name="r114name1">Polash Kumar paul</string>
    <string name="r114dep1">Physics</string>
    <string name="r114ses1">2014-15</string>
    <string name="r114blood1">non</string>
    <string name="r114contact1">01961329040</string>
    <string name="r114name2">Mazedur Rahman Supta</string>
    <string name="r114dep2">Physics</string>
    <string name="r114ses2">2014-15</string>
    <string name="r114blood2">non</string>
    <string name="r114contact2">01754274647</string>
    <string name="r114name3">Sihabuddin Santo</string>
    <string name="r114dep3">Physics</string>
    <string name="r114ses3">2014-15</string>
    <string name="r114blood3">non</string>
    <string name="r114contact3">01749368181</string>
    <string name="r114name4">Topu Saha</string>
    <string name="r114dep4">Physics</string>
    <string name="r114ses4">2015-16</string>
    <string name="r114blood4">non</string>
    <string name="r114contact4">01521254920</string>
    <string name="r114name5">Monowar Hossen</string>
    <string name="r114dep5">Physics</string>
    <string name="r114ses5">2015-16</string>
    <string name="r114blood5">non</string>
    <string name="r114contact5">01755800267</string>
    <string name="r114name6">Mahamud Hasan</string>
    <string name="r114dep6">Physics</string>
    <string name="r114ses6">2015-16</string>
    <string name="r114blood6">non</string>
    <string name="r114contact6">01834575234</string>
    <string name="r116name1">Ismail Kabir</string>
    <string name="r116dep1">Chemistry</string>
    <string name="r116ses1">2014-15</string>
    <string name="r116blood1">non</string>
    <string name="r116contact1">01752458377</string>
    <string name="r116name2">Ismail Hossain</string>
    <string name="r116dep2">Chemistry</string>
    <string name="r116ses2">2014-15</string>
    <string name="r116blood2">non</string>
    <string name="r116contact2">01962691719</string>
    <string name="r116name3">Jahid Biswas</string>
    <string name="r116dep3">Chemistry</string>
    <string name="r116ses3">2014-15</string>
    <string name="r116blood3">non</string>
    <string name="r116contact3">01631465381</string>
    <string name="r116name4">Jakir Hossen</string>
    <string name="r116dep4">Chemistry</string>
    <string name="r116ses4">2014-15</string>
    <string name="r116blood4">non</string>
    <string name="r116contact4">01726700765</string>
    <string name="r116name5">Mozizur Rahman</string>
    <string name="r116dep5">Chemistry</string>
    <string name="r116ses5">2014-15</string>
    <string name="r116blood5">non</string>
    <string name="r116contact5">01734954928</string>
    <string name="r116name6">Rashed Khan</string>
    <string name="r116dep6">Chemistry</string>
    <string name="r116ses6">2015-16</string>
    <string name="r116blood6">non</string>
    <string name="r116contact6">01935658963</string>
    <string name="r117name1">Salam</string>
    <string name="r117dep1">PME</string>
    <string name="r117ses1">2014-15</string>
    <string name="r117blood1">non</string>
    <string name="r117contact1">01745687797</string>
    <string name="r117name2">Tanvir</string>
    <string name="r117dep2">PME</string>
    <string name="r117ses2">2014-15</string>
    <string name="r117blood2">non</string>
</resources>