<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.msttech.smrhall.DedicationActivity"
    tools:showIn="@layout/activity_dedication">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#5C6BC0">

        <TextView
            android:id="@+id/joyBanhla2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="20dp"
            android:textColor="#fff"
            android:gravity="center"
            android:text="@string/joyBangla"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1.0">
            <TextView
                android:id="@+id/shamimName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="@string/shamim_name"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/shamimDesignation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/shamim_desination"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/shamimJessore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/desination_place"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/shamimStudentLegue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bangladesh_student_legue"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight="1.0">

            <ImageView
                android:id="@+id/shamimImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/shamim"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1.0">
            <TextView
                android:id="@+id/shantoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="@string/shanto_name"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/shantoDesignation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/shanto_designation"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/shantoJessore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/desination_place"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/shantoStudentLegue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bangladesh_student_legue"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight="1.0">

            <ImageView
                android:id="@+id/shantoImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/shanto"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
